--- a/vignettes/d-extended-capability-github.Rmd
+++ b/vignettes/d-extended-capability-github.Rmd
@@ -33,6 +33,8 @@ Here we illustrate gradetools's functionalities specific to classes that are man
 
 If you would like to see an introduction on how to structure your class on GitHub you can look at the vignette of the [ghclass package](https://rundel.github.io/ghclass/articles/ghclass.html).
 
+If you have never used ghclass before you will need to set up a GitHub personal access tokens for authentication with GitHub. Refer to the [ghclass vignette](https://rundel.github.io/ghclass/articles/ghclass.html) for instructions. 
+
 ## Cloning assignments from GitHub with ghclass 
 
 Before using gradetools functionalities, the user needs to clone from GitHub all the repos where students have pushed their assignments. This can be done easily and quickly using the function [`local_repo_clone()`](https://rundel.github.io/ghclass/reference/local_repo.html) from the ghclass package. 
