--- a/vignettes/d-extended-capability-github.Rmd
+++ b/vignettes/d-extended-capability-github.Rmd
@@ -81,7 +81,7 @@ Both `assist_advanced_grading()` and `assist_team_grading()` allow for the creat
 assist_advanced_grading(
   rubric_path = "quizzes-collected-week09-regression/example-directory-week09-regression/quiz-09-lin-reg-rubric.csv",
   roster_path = "quizzes-collected-week09-regression/example-directory-week09-regression/class-roster.csv",
-  temp_grade_sheet_path  = "quiz-09-lin-reg-temporary-grade-sheet.csv",
+  grading_progress_log_path  = "quiz-09-lin-reg-grading_progress_log.csv",
   final_grade_sheet_path = "quiz-09-lin-reg-final-grade-sheet.csv",
   example_assignment_path = "week09-regression-CatalinaMedina/quiz-09a-lin-reg-CatalinaMedina.Rmd",
   example_feedback_path = "week09-regression-CatalinaMedina/quiz-09a-lin-reg-CatalinaMedina-feedback.html",
@@ -118,7 +118,7 @@ Here is what a call to `push_to_github()` could look like to push feedback files
 
 ```{r}
 push_to_github (
-  temp_grade_sheet_path =  "quiz-09-lin-reg-temporary-grade-sheet.csv",
+  grading_progress_log_path =  "quiz-09-lin-reg-temporary-grade-sheet.csv",
   class_github_name = "gradetools-test-course",
   example_github_repo = "week09-regression-federicazoe",
   example_identifier = "federicazoe",
